fixed icons on firefox

--- a/src/app/styles/App.scss
+++ b/src/app/styles/App.scss
@@ -68,6 +68,9 @@ body {
     .rightPanel {
       flex: 1;
       margin-top: 106px;
+      background: darken(beige, 5);
+      border-radius: $border-radius;
+      padding-bottom: 10px;
     }
   }
 }
@@ -90,8 +93,6 @@ body {
   body .rightPanel {
     width: 100%;
     float: none;
-    background: beige;
-    border-radius: $border-radius;
     padding-left: 0;
   }
 }
@@ -106,11 +107,13 @@ body {
   body header .picturePanel {
     height: 100%;
   }
+
   section h2 {
     font-size: 100%;
   }
 
-  .rightPanel, .leftPanel {
+  .rightPanel,
+  .leftPanel {
     margin-top: 5px !important;
 
     .contact {
@@ -136,6 +139,7 @@ section {
   flex-direction: column;
   row-gap: 10px;
   flex-grow: 1;
+
   &.formation {
     flex-grow: 0.3;
   }
@@ -162,6 +166,7 @@ section {
     border-radius: $border-radius;
     padding: 5px 10px;
     text-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+    height: fit-content;
 
     a {
       height: 16px;
@@ -200,7 +205,7 @@ section {
   }
 }
 
-p > .icon {
+p>.icon {
   margin-right: 10px;
 }
 
